<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/watch_time"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_above="@+id/edit_query"
        android:layout_marginBottom="100dp"
        android:background="@drawable/head_back"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/head"
        android:textColor="#007ee3"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"
        android:textColor="#768591"
        android:paddingStart="30dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:paddingLeft="30dp"
        android:transitionName="EditText"
        android:layout_centerInParent="true"
        android:id="@+id/edit_query"
        android:layout_margin="10dp"
        android:hint="@string/movie_name"
        android:inputType="textCapWords" />
    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="#007ee3"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_info"
        android:id="@+id/btn"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:textColor="#007ee3"
        android:textStyle="bold"
        android:background="@drawable/btn"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>