<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieInformation">

    <android.support.v7.widget.CardView
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:contentDescription="@null"
                android:src="@drawable/ic_arrow_back_black_24dp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progress"/>
    <EditText
        android:id="@+id/edit_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext"
        android:hint="@string/movie_name"
        android:inputType="textCapWords"
        android:clickable="false"
        android:focusable="false"
        android:paddingStart="30dp"
        android:paddingLeft="10dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:textColor="#768591"
        android:transitionName="EditText" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_query">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainLayout">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cardView"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="No Thumbnail Available"
                    android:id="@+id/fail"
                    android:visibility="invisible"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center" />
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/imageLoader"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:id="@+id/imageThumbnail"/>
            </android.support.v7.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardView"
                android:layout_marginTop="10dp"
                android:text="@string/director"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:id="@+id/director"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/director"
                android:text="@string/released"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/released"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/released"
                android:text="@string/plot"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/plot"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/plot"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:orientation="horizontal"
                    android:paddingBottom="0dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="170dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="1dp"
                        android:layout_marginBottom="10dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="15dp"
                                android:text="Produced By:"
                                android:textColor="#000"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/production"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:text="@string/production"
                                android:textColor="#c7c7c7" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="170dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="15dp"
                                android:text="Runtime:"
                                android:textColor="#000"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/runTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:text="@string/runtime"
                                android:textColor="#c7c7c7" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:layout_width="170dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="1dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="10dp"
                                android:text="Language:"
                                android:textColor="#000"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/language"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:text="@string/language"
                                android:textColor="#c7c7c7" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                    <android.support.v7.widget.CardView
                        android:layout_width="170dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        app:cardCornerRadius="10dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Ratings:"
                                android:textSize="18sp"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="15dp"
                                android:textColor="#000"
                                android:textStyle="bold"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rating"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:id="@+id/rating"
                                android:textColor="#c7c7c7" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:layout_width="170dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="1dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="15dp"
                                android:text="Genre:"
                                android:textColor="#000"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/genre"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:text="@string/genre"
                                android:textColor="#c7c7c7" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                    <android.support.v7.widget.CardView
                        android:layout_width="170dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        app:cardCornerRadius="10dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Actors:"
                                android:textSize="18sp"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="15dp"
                                android:textColor="#000"
                                android:textStyle="bold"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/actors"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:id="@+id/actor"
                                android:textSize="12sp"
                                android:textColor="#c7c7c7" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>